[package]
name = "news-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
rss = "2.0"
cursive_tree_view = "0.8"
chrono = "0.4"
cursive-markup = "0.3"
ellipse = "0.2"
rusqlite = "0.28"
