[package]
name = "news-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
rss = "2.0"
cursive_tree_view = "0.8"
chrono = "0.4"
ellipse = "0.2"
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0"
toml = "0.5"
linkify = "0.9"
html2text = "0.4"
